# VoxelEngine

./: .gitmodules  CMakeLists.txt  CompileAndStart.sh  README.md  imgui.ini  log.txt
src/: Camera.cpp  Camera.hpp  DebugPanel.cpp  DebugPanel.hpp  Engine.cpp  Engine.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  ImGuiPanel.hpp  Include.hpp  InputManager.cpp  InputManager.hpp  Loader.cpp  Loader.hpp  LogPanel.cpp  LogPanel.hpp  Logger.cpp  Logger.hpp  Material.hpp  Profiler.cpp  Profiler.hpp  SVO.cpp  SVO.h  SVO.hpp  Shape.cpp  Shape.hpp  SimpleRenderer.cpp  SimpleRenderer.hpp  Transform.cpp  Transform.hpp  ViewportPanel.cpp  ViewportPanel.hpp  main.cpp
src/Entities/: Camera.cpp  Camera.hpp  Shape.cpp  Shape.hpp
src/Renderer/: Renderer.cpp  Renderer.hpp
src/Renderer/Editor/: DebugPanel.cpp  DebugPanel.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  ImGuiPanel.hpp  LogPanel.hpp  ViewportPanel.cpp  ViewportPanel.hpp
src/Renderer/Shader/: ShaderProgram.cpp  ShaderProgram.hpp
src/Renderer/Shader/GeometryShader/: GeometryShader.cpp  GeometryShader.hpp  fragmentShader.glsl
src/Renderer/Shader/ScreenShader/: ScreenShader.cpp  ScreenShader.hpp  fragmentShader.glsl
src/Shader/: ShaderProgram.cpp  ShaderProgram.hpp
src/Shader/GeometryShader/: GeometryShader.cpp  GeometryShader.hpp  fragmentShader.glsl  vertexShader.glsl
src/Shader/ScreenShader/: ScreenShader.cpp  ScreenShader.hpp  fragmentShader.glsl
src/Shader/StaticShader/: StaticShader.cpp  StaticShader.hpp  fragmentShader.glsl  vertexShader.glsl
